[package]

name = "bitflags-associated-constants"
version = "0.6.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/bitflags"
homepage = "https://github.com/rust-lang/bitflags"
documentation = "https://doc.rust-lang.org/bitflags"
description = "TEMPORARY FORK until associated constants stabilise"

[dev-dependencies]
compiletest_rs = "~0.1.1"
